anchor scroll, clear auth on log out, fix notifications overflow

--- a/components/HeaderNotifications/HeaderNotifications.module.scss
+++ b/components/HeaderNotifications/HeaderNotifications.module.scss
@@ -21,6 +21,7 @@
 }
 
 .notificationItem {
+    overflow: hidden;
     margin-left: -40px;
     padding: 1em;
     border-bottom: 1px solid #EEEEEE;
